<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dimitris.falldetector.ui.MainActivity">

    <LinearLayout
        android:layout_width="431dp"
        android:layout_height="656dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="104dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingTop="100px"
            android:paddingBottom="50px"
            android:text="@string/main_title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="30dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_man_circle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="50px"
            android:text="@string/main_description"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary2"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_choose"
            android:textColor="@color/white"
            android:theme="@style/AppTheme.Gray" />

        <Button
            android:id="@+id/btn_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30px"
            android:text="@string/main_btn_history"
            android:textColor="@color/white"
            android:theme="@style/AppTheme.Gray" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30px"
            android:text="@string/main_btn_start"
            android:textColor="@color/white"
            android:theme="@style/AppTheme.Gray" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>