<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dimitris.falldetector.ui.SetActivity"
    android:background="@drawable/bezels">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="100px"
            android:textAlignment="center"
            android:text="EMERGENCY CONTACT"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="20dp"
            android:layout_marginTop="140dp"
            android:text="@string/set_info"
            android:fontFamily="sans-serif"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="275dp"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/et_country_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="4"
                android:inputType="number"
                android:hint="@string/set_code_hint"
                android:fontFamily="sans-serif"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColorHint="@color/colorSecondary"/>

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="263dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/set_phone_hint"
                android:inputType="phone"
                android:textColorHint="@color/colorSecondary"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:theme="@style/AppTheme.Gray"
            android:id="@+id/bttn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="600dp"
            android:layout_centerHorizontal="true"
            android:text="@string/set_btn_done"
            android:padding="30px"
            android:textColor="@color/white"/>

</RelativeLayout>
